--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
 * {
-   background-color: coral; 
+   background-color: rgb(252, 161, 128); 
+   font-family: Arial, Helvetica, sans-serif;
+   line-height: 1.25;
 }
 
 h1{
     text-align:center;
+    text-transform: uppercase;
 }
 
 img{
-    width: auto;
-    height: 400px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
+    height: auto;
 }
