--- a/style.css
+++ b/style.css
@@ -4,9 +4,12 @@
    line-height: 1.25;
 }
 
-h1{
+h1,
+h2,
+h3{
     text-align:center;
     text-transform: uppercase;
+    text-decoration: underline;
 }
 
 img{
@@ -15,4 +18,7 @@ img{
     margin-right: auto;
     width: 400px;
     height: auto;
+}
+.description{
+    text-align: center;
 }
